--- a/src/main/resources/templates/LogIn.html
+++ b/src/main/resources/templates/LogIn.html
@@ -112,7 +112,7 @@
                             if(data === false) {
                                 document.getElementById('textError').style.display='';
                             } else {
-                                let logInUrl ='../SeaWar/' + [[${roomNumber}]] + '/' + document.getElementById("username").value+ '/field';
+                                let logInUrl ='../SeaBattle/' + [[${roomNumber}]] + '/' + document.getElementById("username").value+ '/field';
                                 window.location.href = logInUrl;
                             }
                       })
