--- a/src/main/resources/templates/SeaBattleCreate.html
+++ b/src/main/resources/templates/SeaBattleCreate.html
@@ -2,7 +2,7 @@
 <html xmlns:th="https://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
-    <title>SeaWar</title>
+    <title>SeaBattle</title>
     <style type="text/css">
    #userTable, #enterRoom, #hello, #helpMess, #helpMess2, #helpMess3,  #center, #ships, #messageUser {
         display: flex;
@@ -249,7 +249,7 @@
     </div>
 </body>
 <script th:inline="javascript">
-const url = '../../api/v1/seaWar/';
+const url = '../../api/v1/seaBattle/';
 
 let error = false;
 let counter = 1;
